# DroneOA_ROS

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Config.json  ENVSetup.md  LICENSE  README.md  haros_config.yaml  package.xml
.github/workflows/: main.yml
doc/: FGM_Plan_Checklist.md
include/droneoa_ros/: CNCInterface.hpp  CNCInterfacePX4.hpp  ConsoleInputManager.hpp  GPSPoint.hpp  LidarInterface.hpp  OAController.hpp  PDN.hpp  RSCInterface.hpp  Utils.hpp
include/droneoa_ros/ConsoleService/: ConsoleService.hpp
include/droneoa_ros/GUI/: GUISubject.hpp  GUISubscriber.hpp
include/droneoa_ros/GUI/Debug/: CNCPopup.hpp  LidarPopup.hpp  RSCPopup.hpp
include/droneoa_ros/GUI/Release/: UE4SIMServer.hpp  WebGUIServer.hpp
include/droneoa_ros/HWI/: CNCArdupilot.hpp  ConsoleInputManager.hpp  LidarYDLidar.hpp  OctomapClient.hpp  RSC.hpp
include/droneoa_ros/HWI/Utils/: CNCUtils.hpp  GPSPoint.hpp  LidarUtils.hpp  LocalPoint.hpp  Position3D.hpp
include/droneoa_ros/HWI/base/: CNCGeneric.hpp  LidarGeneric.hpp
include/droneoa_ros/HWI/interface/: CNCInterface.hpp  DepthCamInterface.hpp  LidarInterface.hpp
include/droneoa_ros/OAC/: APFAlg.hpp  BaseAlg.hpp  CAAlgDepthCam.hpp  CAAlgLidar.hpp  CMDParser.hpp  CMDRunner.hpp  Command.hpp  FGMAlg.hpp  OAAlgFGM.hpp  OAAlgGLO.hpp  OAAlgRRT.hpp  OAC.hpp  OMPLPlanner.hpp
include/droneoa_ros/OAC/DataStorage/: CircularBuffer.hpp
include/droneoa_ros/OAC/ompl/: omplPlanner.hpp
include/droneoa_ros/OAUtils/: BaseAlg.hpp  CAAlgDepthCam.hpp  CAAlgLidar.hpp  CMDParser.hpp  CMDRunner.hpp  CollisionAvoidanceAlg.hpp  Command.hpp
include/droneoa_ros/PackageManager/: PMCommandParser.hpp
include/droneoa_ros/Utils/: CNCUtils.hpp  ConfChangedListener.hpp  DataPool.hpp  DataPoolClient.hpp  DataPoolEntries.hpp  DataPoolServer.hpp  DataPoolSubscriber.hpp  GeneralUtils.hpp  JsonConverter.hpp  JsonReader.hpp  JsonUtils.hpp
launch/: README.md  StartCore.launch  console.launch  droneoa_ros.launch  pm.launch  rs_camera.launch  rs_camera_t265_d435.launch  step1.launch  step1NGN.launch  step1SITL.launch  step1SITLUE4.launch  step1SITL_t265.launch  step2.launch
launch/components/: apm.launch  apmSITL.launch  imageToPC2.launch  octomap_depth.launch  rs_camera.launch  rs_camera_t265_d435.launch  rs_rtabmap.launch  t265_tf_to_mavros.launch
launch/deploy/: step1GPS.launch  step1NGN.launch
launch/sitl/: step1SITL.launch  step1SITLUE4.launch  step1SITL_t265.launch
launch/unittest/: run_all.launch
msg/: DataPoolPair.msg  DataPoolSync.msg
scripts/: bootSITL.sh  realsenseKey  simple_UDP.py  test.bash
scripts/PackageManager/: install.sh  kill.sh  launch.sh  rebuild.sh  shutdownOtherNode.sh  uninstall.sh  update.sh
scripts/ci/: checkUnittestResult.sh  prescript.sh
scripts/deploy_setup/: README.md  deploy_ardupilot.sh
scripts/dev_setup/: ENV_script.sh  README.md  realsenseKey
scripts/setup/: 0_install_ros.sh  1_install_dep_1.sh  2_install_ardupilot.sh  3_install_SITL.sh  ENV_script.sh  README.md  RRT_script.sh  SITL_setup.sh  test_script.sh
scripts/setup/Achieved/: 0_install_ros.sh  1_install_dep_2.sh  3_install_SITL_Lib.sh  Achieved.7z
scripts/subScripts/: launchConnectionProfile.sh  launchDroneOANode.sh  launchSITLInstance.sh  makeWorkSpace.sh
scripts/testing/: README.md  StartAll.sh  sim_ue4.bash  simple_UDP.py  tmux_setup.sh
scripts/tmux/: README.md  droneoa_gps.yml  droneoa_ngn.yml  droneoa_sitl.yml  droneoa_ue4.yml  help_readme.txt  launch_tmux.sh
src/: CNCInterface.cpp  CNCInterfacePX4.cpp  ConsoleInputManager.cpp  GPSPoint.cpp  LidarInterface.cpp  OAController.cpp  RSCInterface.cpp  Utils.cpp  main.cpp
src/ConsoleService/: ConsoleService.cpp  ConsoleServiceNode.cpp
src/GUI/: GUISubject.cpp  GUISubscriber.cpp
src/GUI/Debug/: CNCPopup.cpp  LidarPopup.cpp  RSCPopup.cpp
src/GUI/Release/: UE4SIMServer.cpp  WebGUIServer.cpp
src/HWI/: CNCArdupilot.cpp  ConsoleInputManager.cpp  LidarYDLidar.cpp  OctomapClient.cpp  RSC.cpp
src/HWI/Utils/: CNCUtils.cpp  GPSPoint.cpp  LidarUtils.cpp  LocalPoint.cpp  Position3D.cpp
src/HWI/base/: CNCGeneric.cpp  LidarGeneric.cpp
src/OAC/: BaseAlg.cpp  CAAlgDepthCam.cpp  CAAlgLidar.cpp  CMDParser.cpp  CMDRunner.cpp  Command.cpp  OAAlgFGM.cpp  OAAlgGLO.cpp  OAAlgRRT.cpp  OAC.cpp  OMPLPlanner.cpp
src/OAC/ompl/: omplPlanner.cpp
src/OAUtils/: BaseAlg.cpp  CAAlgDepthCam.cpp  CAAlgLidar.cpp  CMDParser.cpp  CMDRunner.cpp  CollisionAvoidanceAlg.cpp  Command.cpp
src/PackageManager/: PMCommandParser.cpp  PackageManagerNode.cpp
src/Utils/: CNCUtils.cpp  ConfChangedListener.cpp  DataPool.cpp  DataPoolClient.cpp  DataPoolEntries.cpp  DataPoolServer.cpp  DataPoolSubscriber.cpp  GeneralUtils.cpp  JsonConverter.cpp  JsonReader.cpp  JsonUtils.cpp
srv/: AddDPData.srv  CheckGetNewInput.srv  GetDPData.srv  GetDPDataAsString.srv  SetDPData.srv
test/: cnc_unittest.cpp  utils_unittest.cpp
test/Utils/: GeneralUtils.hpp
test/command_unittest/: command_tests.cpp  test_main.cpp  test_suite.cpp  test_suite.hpp
test/mocks/: mock_cnc.hpp
test/utils_unittest/: utils_unittest.cpp
